# -*- coding: utf-8 -*-

[metadata]
name = bact
fullname = Berlin accelerator comissioning tools
version = 0.0.0
url = https://github.com:hz-b/bact-archiver
author = Andreas Schälicke, Pierre Schnizer
author_email = andreas.schaelicke@helmholtz-berlin.de
               pierre.schnizer@helmholtz-berlin.de
description = EPICS archiver appliance access using google protobuf
classifiers =
	 Development Status :: 4 - Beta
         Intended Audience :: Science/Research
         License :: OSI Approved :: GNU General Public License (GPL)
         Programming Language :: Python :: 3
         Topic :: Scientific/Engineering :: Physics

[build-system]
requires = setup_tools
