# -*- coding: utf-8 -*-

[metadata]
name = bact
version = 0.0.0
url = https://github.com/hz-b/bact/
author = Pierre Schnizer
author_email = pierre.schnizer@helmholtz-berlin.de
license = GPL
description = Berlin accelerator comissioning tools
long_description = file: README.rst
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics

[build-system]
requires = setup_tools

